Molecules & Light: Modified the color scheme for a more engaging look
Molecules & Light: Added all molecules to the control panel
Molecules & Light: Created the two-line molecule selector on the control panel.
Molecules & Light: Added the visual connector between the spectrum range and the selector button.
Molecules & Light: Make the lines from the ranges connect to the choice itself
Added CO, NO2, and O3 to the Molecules & Light sim.
> Fixed: Photons were disappearing before traveling out of view on the Photon Absorption tab.
Created the spectrum representation for the control panel in Molecules & Light
Added the control panel for controlling the photon emitter in Molecules & Light
Added the new photon emitter types for Molecules & Light (UV & Microwave)
# 3.01.02 (45790) Nov 7, 2010
> Fixed a bug that prevented photons from reflecting from ice
# 3.01.01 (45785) Nov 5, 2010
> Fixed a bug that prevented clouds from absorbing photons 
# 3.01.00 (45324) Oct 21, 2010
> Fixed an issue where "Reset All" on the Photon Absorption tab wasn't resetting photon emission rate to zero.
# 3.00.00 (45321) Oct 21, 2010
10/21/10 > New version that adds the "Photon Absorption" tab.
# 2.07.21 (45207) Oct 19, 2010
# 2.07.20 (45202) Oct 19, 2010
10/19/10 Deploying to dev as release candidate.
Changed the photon emitter such that it no longer sets the emission rate to zero when switching between photon types.
# 2.07.18 (45072) Oct 15, 2010
10/15/10 Fixed an issue where units were missing from some of the ice age gas concentrations.
# 2.07.17 (45037) Oct 13, 2010
10/13/10 Created the new "Molecules and Light" flavor for this sim.
Added values for concentrations of gasses during the ice age.
Broke out the "Photon Absorption" tab into a separate sim which will become "Molecules and Light".
Updated the value of CO2 concentration in today's atmosphere (it has gone up since the sim was originally published).